<resources>
    <string name="app_name">MyFerrari</string>

    <string name="email_label">Email</string>
    <string name="password_label">Password</string>
    <string name="signin_label">Sign In</string>
    
    <string name="cars_tab_label">Cars</string>
    <string name="orders_tab_label">Orders</string>

    <string name="status">Status: %1$s</string>
    <string name="status_ready">Ready</string>
    <string name="status_service">In service</string>
    <string name="status_out">Out</string>

    <string name="location">Location: \n%1$s, %2$s</string>
    <string name="date_on">Date start: %1$s</string>
    <string name="date_off">Date finish: %1$s</string>

    <string name="select_location">Select Location</string>

    <string name="dialog_datetime_on">Select starting date and time</string>
    <string name="dialog_datetime_off">Select finishing date and time</string>

    <string name="select_date">Select Date</string>
    <string name="select_time">Select Time</string>

    <string name="go_to_location">Go to location</string>

    <string name="time_formatter">%1$d:%2$d</string>

</resources>
