<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:orientation="vertical" android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/colorPrimaryDark">
    <Spinner
        android:id="@+id/car_spinner"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_margin="16dp"/>
    <TextView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:textAlignment="center"
        android:text="@string/dialog_datetime_on"
        android:textColor="@color/ferrari_yellow"
        android:textSize="20dp"/>
    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="horizontal"
        android:layout_margin="10dp">
        <Button
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:text="@string/select_date"
            android:background="@color/colorAccent"
            android:textColor="@color/ferrari_yellow"/>
        <Button
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:text="@string/select_time"
            android:background="@color/colorAccent"
            android:textColor="@color/ferrari_yellow"/>
    </LinearLayout>
    <TextView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:textAlignment="center"
        android:text="@string/dialog_datetime_off"
        android:textColor="@color/ferrari_yellow"
        android:textSize="20dp"/>
    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="horizontal"
        android:layout_margin="10dp">
        <Button
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_weight="1"
        android:text="@string/select_date"
            android:background="@color/colorAccent"
            android:textColor="@color/ferrari_yellow"/>
        <Button
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:text="@string/select_time"
            android:background="@color/colorAccent"
            android:textColor="@color/ferrari_yellow"/>
    </LinearLayout>
    <Button
        android:id="@+id/go_to_location_btn"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/go_to_location"
        android:layout_margin="10dp"
        android:background="@color/colorAccent"
        android:textColor="@color/ferrari_yellow"/>
</LinearLayout>